--- a/index.html
+++ b/index.html
@@ -31,6 +31,68 @@
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
+
+        .dot {
+            height: 10px;
+            width: 10px;
+            background-color: blue;
+            border-radius: 50%;
+            display: inline-block;
+        }
+
+        .clicked {
+            background-color: lightgreen;
+        }
+
+        #userIdDisplay {
+            background-color: green;
+            color: white;
+            padding: 5px;
+            border-radius: 5px;
+            animation: blink 1s infinite;
+        }
+
+        @keyframes blink {
+            0% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        #zoomControls {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+            background: white;
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .sos-active {
+            background-color: red !important;
+            animation: sos-flash 1s infinite;
+        }
+
+        @keyframes sos-flash {
+            0% { background-color: red; }
+            50% { background-color: white; }
+            100% { background-color: red; }
+        }
+
+        #sosBtn {
+            background-color: #ff4444;
+            color: white;
+            font-weight: bold;
+        }
     </style>
 </head>
 
@@ -38,8 +100,19 @@
     <div id="controls">
         <button id="addMarkerBtn">Add Marker</button>
         <button id="routeBtn">Create Route</button>
-        <button id="satelliteViewBtn">Satellite View</button>
         <button id="zoomToCurrentLocationBtn">Zoom to Current Location</button>
+        <button id="startRecordBtn">Start Record</button>
+        <button id="stopRecordBtn">Stop Record</button>
+        <button id="createCheckpointBtn">Create Checkpoint</button>
+        <input type="number" id="userIdInput" placeholder="Enter User ID" min="1000" max="9999" />
+        <button id="findUserBtn">Find User</button>
+        <div id="userIdDisplay">User ID: <span id="userId"></span></div>
+        <button id="sosBtn">SOS</button>
+        <button id="replayRouteBtn">Replay Route</button>
+    </div>
+    <div id="zoomControls">
+        <button id="zoomInBtn">+</button>
+        <button id="zoomOutBtn">-</button>
     </div>
     <div id="map"></div>
 </body>
@@ -49,11 +122,36 @@
 <!-- leaflet js  -->
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 <script>
-    // Map initialization 
-    var map = L.map('map').setView([14.0860746, 100.608406], 6);
+    // Generate a unique 4-digit ID for each user
+    function generateUniqueId() {
+        return Math.floor(1000 + Math.random() * 9000);
+    }
 
-    //osm layer
+    var userId = generateUniqueId();
+    document.getElementById('userId').textContent = userId;
+    console.log("Your User ID is: " + userId);
+
+    // Store user ID and location in local storage
+    function storeUserLocation(userId, lat, long) {
+        var userLocations = JSON.parse(localStorage.getItem('userLocations')) || {};
+        userLocations[userId] = [lat, long];
+        localStorage.setItem('userLocations', JSON.stringify(userLocations));
+    }
+
+    // Retrieve user location from local storage
+    function getUserLocation(userId) {
+        var userLocations = JSON.parse(localStorage.getItem('userLocations')) || {};
+        return userLocations[userId];
+    }
+
+    // Map initialization 
+    var map = L.map('map', {
+        zoomControl: false // Disable default zoom control
+    }).setView([14.0860746, 100.608406], 6);
+
+    // OpenStreetMap layer
     var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     });
@@ -64,15 +162,19 @@
         attribution: '&copy; <a href="https://www.opentopomap.org/copyright">OpenTopoMap</a> contributors'
     });
 
-    document.getElementById('satelliteViewBtn').addEventListener('click', function () {
-        if (map.hasLayer(osm)) {
-            map.removeLayer(osm);
-            map.addLayer(satellite);
-        } else {
-            map.removeLayer(satellite);
-            map.addLayer(osm);
-        }
+    // Google Satellite layer
+    var googleSatellite = L.tileLayer('https://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
+        subdomains: ['mt0', 'mt1', 'mt2', 'mt3'],
+        attribution: '&copy; <a href="https://www.google.com/maps">Google Maps</a>'
     });
+
+    // Add layer control to switch between layers
+    var baseMaps = {
+        "OpenStreetMap": osm,
+        "Satellite": satellite,
+        "Google Satellite": googleSatellite
+    };
+    L.control.layers(baseMaps).addTo(map);
 
     if (!navigator.geolocation) {
         console.log("Your browser doesn't support geolocation feature!")
@@ -84,25 +186,34 @@
         });
     }
 
-    var marker, circle, secondMarker, routeControl, pathLine;
+    var marker, circle, secondMarker, routeControl, pathLine, dotMarker;
     var pathCoordinates = [];
+    var isRecording = false;
+    var recordedPath = [];
+    var userLocations = {};
+    var targetUserId = null;
+    var checkpoints = {};
+    var recordingLine, startMarker, endMarker;
+    var sosActive = false;
+    var sosMarker = null;
+    var replayAnimation = null;
 
     function updatePosition(position) {
-        var lat = position.coords.latitude
-        var long = position.coords.longitude
-        var accuracy = position.coords.accuracy
+        var lat = position.coords.latitude.toFixed(6);
+        var long = position.coords.longitude.toFixed(6);
+        var accuracy = position.coords.accuracy;
 
         if (marker) {
-            marker.setLatLng([lat, long]);
+            marker.setLatLng([lat, long]).bindTooltip("Lat: " + lat + " Long: " + long).openTooltip();
         } else {
-            marker = L.marker([lat, long]).addTo(map);
+            marker = L.marker([lat, long]).addTo(map).bindTooltip("Lat: " + lat + " Long: " + long).openTooltip();
         }
 
         if (circle) {
-            circle.setLatLng([lat, long]).setRadius(40);
+            circle.setLatLng([lat, long]).setRadius(20);
         } else {
-            circle = L.circle([lat, long], { radius: 40 }).addTo(map);
-            circle.on('click', function() {
+            circle = L.circle([lat, long], { radius: 20 }).addTo(map);
+            circle.on('click', function () {
                 map.setView([lat, long], 18);
             });
         }
@@ -112,7 +223,58 @@
         if (pathLine) {
             pathLine.setLatLngs(pathCoordinates);
         } else {
-            pathLine = L.polyline(pathCoordinates, { color: 'red' }).addTo(map);
+            pathLine = L.polyline(pathCoordinates, { color: 'blue' }).addTo(map);
+        }
+
+        if (isRecording) {
+            recordedPath.push([lat, long]);
+            if (!dotMarker) {
+                dotMarker = L.circleMarker([lat, long], { radius: 5, color: 'blue' }).addTo(map);
+            } else {
+                dotMarker.setLatLng([lat, long]);
+            }
+            recordingLine.addLatLng([lat, long]);
+        }
+
+        // Store user location
+        storeUserLocation(userId, lat, long);
+
+        // Update route if target user is moving
+        if (targetUserId && userLocations[targetUserId]) {
+            var targetLocation = userLocations[targetUserId];
+            if (routeControl) {
+                map.removeControl(routeControl);
+            }
+            routeControl = L.Routing.control({
+                waypoints: [
+                    marker.getLatLng(),
+                    L.latLng(targetLocation[0], targetLocation[1])
+                ],
+                routeWhileDragging: true
+            }).on('routesfound', function(e) {
+                var routes = e.routes;
+                var summary = routes[0].summary;
+                console.log('Distance: ' + summary.totalDistance + ' meters, Time: ' + summary.totalTime + ' seconds');
+            }).on('routeselected', function(e) {
+                var route = e.route;
+                var coordinates = route.coordinates;
+                var i = 0;
+                var interval = setInterval(function() {
+                    if (i < coordinates.length) {
+                        marker.setLatLng([coordinates[i].lat, coordinates[i].lng]);
+                        i++;
+                    } else {
+                        clearInterval(interval);
+                    }
+                }, 1000);
+            }).addTo(map);
+        }
+
+        // Check distance to checkpoints
+        for (var checkpointName in checkpoints) {
+            var checkpoint = checkpoints[checkpointName];
+            var distance = map.distance([lat, long], checkpoint.latlng);
+            console.log("Distance to " + checkpointName + ": " + distance.toFixed(2) + " meters");
         }
 
         var featureGroup = L.featureGroup([marker, circle]).addTo(map)
@@ -139,7 +301,16 @@
         }
     }
 
+    function toggleButtonClass(buttonId) {
+        var buttons = document.querySelectorAll('#controls button');
+        buttons.forEach(function (button) {
+            button.classList.remove('clicked');
+        });
+        document.getElementById(buttonId).classList.add('clicked');
+    }
+
     document.getElementById('addMarkerBtn').addEventListener('click', function () {
+        toggleButtonClass('addMarkerBtn');
         map.once('click', function (e) {
             if (secondMarker) {
                 map.removeLayer(secondMarker);
@@ -149,6 +320,7 @@
     });
 
     document.getElementById('routeBtn').addEventListener('click', function () {
+        toggleButtonClass('routeBtn');
         if (marker && secondMarker) {
             if (routeControl) {
                 map.removeControl(routeControl);
@@ -166,6 +338,7 @@
     });
 
     document.getElementById('zoomToCurrentLocationBtn').addEventListener('click', function () {
+        toggleButtonClass('zoomToCurrentLocationBtn');
         if (marker) {
             map.setView(marker.getLatLng(), 18);
         } else {
@@ -173,5 +346,156 @@
         }
     });
 
-    // Remove the page reload function
+    document.getElementById('startRecordBtn').addEventListener('click', function () {
+        toggleButtonClass('startRecordBtn');
+        isRecording = true;
+        recordedPath = [];
+        if (marker) {
+            startMarker = L.circleMarker(marker.getLatLng(), { radius: 5, color: 'yellow' }).addTo(map);
+        }
+        recordingLine = L.polyline([], { color: 'yellow' }).addTo(map);
+    });
+
+    document.getElementById('stopRecordBtn').addEventListener('click', function () {
+        toggleButtonClass('stopRecordBtn');
+        isRecording = false;
+        if (recordedPath.length > 0) {
+            if (marker) {
+                endMarker = L.circleMarker(marker.getLatLng(), { radius: 5, color: 'yellow' }).addTo(map);
+            }
+            // Capture the map as an image
+            html2canvas(document.getElementById('map')).then(function (canvas) {
+                var img = canvas.toDataURL('image/png');
+                var link = document.createElement('a');
+                link.href = img;
+                link.download = 'recordedPath.png';
+                link.click();
+            });
+        } else {
+            alert('No path recorded.');
+        }
+    });
+
+    document.getElementById('findUserBtn').addEventListener('click', function () {
+        targetUserId = document.getElementById('userIdInput').value;
+        var targetLocation = getUserLocation(targetUserId);
+        if (targetLocation) {
+            if (routeControl) {
+                map.removeControl(routeControl);
+            }
+            routeControl = L.Routing.control({
+                waypoints: [
+                    marker.getLatLng(),
+                    L.latLng(targetLocation[0], targetLocation[1])
+                ],
+                routeWhileDragging: true
+            }).addTo(map);
+        } else {
+            alert('User ID not found.');
+        }
+    });
+
+    document.getElementById('createCheckpointBtn').addEventListener('click', function () {
+        toggleButtonClass('createCheckpointBtn');
+        map.once('click', function (e) {
+            var latlng = e.latlng;
+            var checkpointName = prompt("Enter checkpoint name:");
+            if (checkpointName) {
+                var checkpointMarker = L.circleMarker(latlng, { radius: 5, color: 'red' }).addTo(map);
+                checkpointMarker.bindTooltip("Lat: " + latlng.lat.toFixed(6) + " Long: " + latlng.lng.toFixed(6) + " Name: " + checkpointName).openTooltip();
+                checkpoints[checkpointName] = { latlng: latlng, marker: checkpointMarker };
+            }
+        });
+    });
+
+    document.getElementById('zoomInBtn').addEventListener('click', function () {
+        map.zoomIn();
+    });
+
+    document.getElementById('zoomOutBtn').addEventListener('click', function () {
+        map.zoomOut();
+    });
+
+    document.getElementById('sosBtn').addEventListener('click', function() {
+        if (!sosActive) {
+            activateSOS();
+        } else {
+            deactivateSOS();
+        }
+    });
+
+    document.getElementById('replayRouteBtn').addEventListener('click', function() {
+        toggleButtonClass('replayRouteBtn');
+        replayRoute();
+    });
+
+    function activateSOS() {
+        sosActive = true;
+        document.getElementById('sosBtn').classList.add('sos-active');
+        
+        if (marker) {
+            // Create SOS marker
+            if (sosMarker) map.removeLayer(sosMarker);
+            sosMarker = L.circleMarker(marker.getLatLng(), {
+                radius: 20,
+                color: 'red',
+                fillColor: '#f03',
+                fillOpacity: 0.5
+            }).addTo(map);
+            
+            // Flash the SOS marker
+            let expanding = true;
+            setInterval(() => {
+                if (expanding) {
+                    sosMarker.setRadius(sosMarker.getRadius() + 5);
+                    if (sosMarker.getRadius() > 50) expanding = false;
+                } else {
+                    sosMarker.setRadius(sosMarker.getRadius() - 5);
+                    if (sosMarker.getRadius() < 20) expanding = true;
+                }
+            }, 200);
+
+            // Simulate sending SOS signal
+            console.log('SOS signal sent from location:', marker.getLatLng());
+        }
+    }
+
+    function deactivateSOS() {
+        sosActive = false;
+        document.getElementById('sosBtn').classList.remove('sos-active');
+        if (sosMarker) {
+            map.removeLayer(sosMarker);
+            sosMarker = null;
+        }
+    }
+
+    function replayRoute() {
+        if (recordedPath.length < 2) {
+            alert('No recorded route to replay');
+            return;
+        }
+
+        if (replayAnimation) {
+            map.removeLayer(replayAnimation);
+        }
+
+        const replayMarker = L.circleMarker([recordedPath[0][0], recordedPath[0][1]], {
+            radius: 8,
+            color: '#ff3300',
+            fillColor: '#ff3300',
+            fillOpacity: 0.7
+        }).addTo(map);
+
+        let i = 0;
+        replayAnimation = setInterval(() => {
+            if (i < recordedPath.length) {
+                replayMarker.setLatLng([recordedPath[i][0], recordedPath[i][1]]);
+                map.setView([recordedPath[i][0], recordedPath[i][1]], map.getZoom());
+                i++;
+            } else {
+                clearInterval(replayAnimation);
+                map.removeLayer(replayMarker);
+            }
+        }, 1000);
+    }
 </script>
