--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
                 var interval = setInterval(function () {
                     if (i < coordinates.length) {
                         marker.setLatLng([coordinates[i].lat, coordinates[i].lng]);
+                        // Remove the part of the path that has been traveled
+                        pathCoordinates.shift();
+                        pathLine.setLatLngs(pathCoordinates);
                         i++;
                     } else {
                         clearInterval(interval);
@@ -348,7 +351,7 @@
         isRecording = true;
         recordedPath = [];
         if (marker) {
-            startMarker = L.circleMarker(marker.getLatLng(), { radius: 5, color: 'yellow' }).addTo(map);
+            startMarker = L.circleMarker(marker.getLatLng(), { radius: 5, color: 'yellow', weight: 2, fillColor: 'yellow', fillOpacity: 1, stroke: true, color: 'black' }).addTo(map);
         }
         recordingLine = L.polyline([], { color: 'yellow' }).addTo(map);
     });
@@ -358,7 +361,7 @@
         isRecording = false;
         if (recordedPath.length > 0) {
             if (marker) {
-                endMarker = L.circleMarker(marker.getLatLng(), { radius: 5, color: 'yellow' }).addTo(map);
+                endMarker = L.circleMarker(marker.getLatLng(), { radius: 5, color: 'yellow', weight: 2, fillColor: 'yellow', fillOpacity: 1, stroke: true, color: 'black' }).addTo(map);
             }
             // Capture the map as an image
             html2canvas(document.getElementById('map')).then(function (canvas) {
